[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
authors = ["Aston Marcin <you@example.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astonmarcin/hypermodern-python"
repository = "https://github.com/astonmarcin/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
